fix overlapping width and redesign scrollbar

--- a/css/main.css
+++ b/css/main.css
@@ -13,18 +13,18 @@
 	visibility: hidden;
 }
 
-main {
-	width: 100%;
-}
-
 body {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	width: 100%;
+	justify-content: center;
 	overflow-x: hidden;
+	width: 100vw !important;
 }
 
+main {
+	width: 100%;
+}
 /* navigation bar */
 
 nav {
@@ -34,7 +34,7 @@ nav {
 	background: black;
 	justify-content: center;
 	flex-direction: row;
-	width: 100vw;
+	width: 100%;
 	z-index: 1;
 	opacity: 0.85;
 	box-shadow: 10px 10px 30px black;
@@ -133,7 +133,7 @@ p {
 
 /* fact */
 #fact {
-	width: 720px;
+	width: 680px;
 	display: flex;
 	padding-top: 2rem;
 	flex-direction: column;
@@ -162,7 +162,7 @@ p {
 }
 
 .fact_image {
-	width: 45%;
+	width: 40%;
 	align-self: center;
 	box-shadow: 10px 10px 30px grey;
 	transition: all 1s;
@@ -252,18 +252,14 @@ footer a {
 }
 
 body::-webkit-scrollbar {
-	background: wheat;
-	width: 10px;
-	opacity: 0.2;
-}
-
-body::-webkit-scrollbar-thumb {
-	background: black;
-	border-radius: 75%;
 	width: 5px;
 }
 
+body::-webkit-scrollbar-thumb {
+	background: white;
+}
+
 body::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	background-color: #f5f5f5;
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+	background-color: black;
 }
